Mon Jul  8 00:29:00 BST 2013  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/zh_CN.po: Fix po4a syntax errors.

Sun Jul  7 22:53:02 BST 2013  Wylmer Wang  <wantinghard@gmail.com>

	* man/po4a/po/zh_CN.po: Update from Translation Project.

Fri Jun 28 06:13:17 BST 2013  Colin Watson  <cjwatson@debian.org>

	* lib/encodings.c (find_charset_locale): Attempt fallback locales
	  even if /usr/share/i18n/SUPPORTED exists.  (It may exist but none
	  of the UTF-8 locales mentioned it in may be present; nevertheless,
	  C.UTF-8 may be available.)

Thu Jun 27 11:38:56 BST 2013  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.5.

Thu Jun 27 11:34:40 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (xcopy): Allocate buf on the heap, as 32768 bytes may
	  be too large for some stacks.  Reported by Coverity via Peter
	  Schiffer.

Thu Jun 27 10:47:13 BST 2013  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING: Mention that xasprintf may be more readable than
	  appendstr.
	* include/manconfig.h.in (mkdbname): Rephrase using xasprintf.
	* lib/decompress.c (decompress_open): Likewise.
	* lib/pathsearch.c (pathsearch): Likewise.
	* lib/tempfile.c (create_tempdir): Likewise.
	* lib/util.c (remove_directory): Likewise.
	* src/check_mandirs.c (add_dir_entries, mkcatdirs): Likewise.
	* src/compression.c (comp_file): Likewise.
	* src/convert_name.c (convert_name): Likewise.
	* src/globbing.c (make_pattern, match_in_directory, look_for_file):
	  Likewise.
	* src/man.c (parse_opt, display_filesystem, display_database,
	  do_global_apropos_section): Likewise.
	* src/manconv_client.c (add_manconv): Likewise.
	* src/mandb.c (mandb, process_manpath, purge_catsubdirs,
	  purge_catdirs, main): Likewise.
	* src/manp.c (pathappend, get_nls_manpath, get_manpath,
	  read_config_file, has_mandir): Likewise.
	* src/ult_src.c (ult_hardlink): Likewise.
	* src/whatis.c (simple_convert, use_grep, display, main): Likewise.
	* src/zsoelim.l (zsoelim_open_file): Likewise.
