@@ -1,3 +1,8 @@
+Mon Jul  8 01:30:56 BST 2013  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (format_display): Simplify using xasprintf.
+	* src/whatis.c (do_apropos): Likewise.
+
 Mon Jul  8 00:29:00 BST 2013  Colin Watson  <cjwatson@debian.org>
 
 	* man/po4a/po/zh_CN.po: Fix po4a syntax errors.
